# Tagster

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: cli.py
src/tagster/: cli.py  core.py
src/tagster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_tag_single_image.py
