[project]
name = "tagster"
version = "0.1.0"
description = "Minimal CLI to auto-tag images via clip-interrogator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
  "clip-interrogator>=0.4.0",
  "Pillow",
  "tqdm",
  "click",
  "pandas"
]
[project.scripts]
tagster = "src.cli:main"

[tool.setuptools]
package-dir= {"" = "src"}

