[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tagster"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
  "clip-interrogator>=0.4.0",
  "Pillow",
  "tqdm",
  "click",
  "pandas"
]
readme = "README.md"
license = "MIT"

[project.scripts]
tagster = "tagster.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tagster*"]

